--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   max-width: 100vw;
   min-width: 100vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -34,4 +35,10 @@ body {
 
 .btn:hover, .btn:focus {
   background: #0F9F4F;
+}
+
+.link {
+  padding: 0.5rem;
+  min-height: 18px;
+  color: #1FB6FF;
 }
